--- a/src/Config/CS_SDK.props
+++ b/src/Config/CS_SDK.props
@@ -55,4 +55,7 @@
 		<IsNETFramework>true</IsNETFramework>
 		<DefineConstants>$(DefineConstants);NETFRAMEWORK</DefineConstants>
 	</PropertyGroup>
+	<PropertyGroup Condition="$(Platform.Contains('_DA'))">
+		<DefineConstants>$(DefineConstants);DESIGN_AUTOMATION</DefineConstants>
+	</PropertyGroup>
 </Project>
