--- a/test/Libraries/RevitServicesTests/RevitServicesTests.csproj
+++ b/test/Libraries/RevitServicesTests/RevitServicesTests.csproj
@@ -69,5 +69,6 @@ limitations under the License.
     <ProjectReference Include="$(SolutionDir)Libraries\RevitServices\RevitServices.csproj">
       <Private>False</Private>
     </ProjectReference>
+    <PackageReference Include="DynamoVisualProgramming.Tests" Version="3.4.1.7055" />
   </ItemGroup>
 </Project>
