--- a/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
+++ b/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
@@ -43,16 +43,7 @@
     <ProjectReference Include="$(SolutionDir)Libraries\RevitNodes\RevitNodes.csproj" />
     <ProjectReference Include="$(SolutionDir)Libraries\RevitServices\RevitServices.csproj" />
     <ProjectReference Include="..\RevitTestServices\RevitTestServices.csproj" />
-    <ProjectReference Include="$(SolutionDir)Libraries\RevitNodes\RevitNodes.csproj">
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="$(SolutionDir)Libraries\RevitServices\RevitServices.csproj">
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\RevitTestServices\RevitTestServices.csproj">
-      <Private>False</Private>
-    </ProjectReference>
-    <PackageReference Include="DynamoVisualProgramming.Tests" Version="3.4.1.7055" />
+    <PackageReference Include="DynamoVisualProgramming.Tests" Version="3.4.1.7055" ExcludeAssets="runtime" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Elements\Views\StructuralPlanViewTests.cs" />
