--- a/src/Config/CS_SDK.props
+++ b/src/Config/CS_SDK.props
@@ -39,4 +39,9 @@
     <Optimize>true</Optimize>
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
+  <ItemDefinitionGroup>
+    <ProjectReference>
+      <Private>false</Private>
+    </ProjectReference>
+  </ItemDefinitionGroup>
 </Project>
