--- a/src/DynamoRevit/DynamoRevit.csproj
+++ b/src/DynamoRevit/DynamoRevit.csproj
@@ -101,14 +101,13 @@
   <ItemGroup>
     <PackageReference Include="DynamoVisualProgramming.Core" Version="3.5.0.8297" ExcludeAssets="runtime" GeneratePathProperty="true" />
     <PackageReference Include="DynamoVisualProgramming.WpfUILibrary" Version="3.5.0.8297" ExcludeAssets="runtime" />
-    <PackageReference Include="Greg" Version="3.0.0.3175" ExcludeAssets="runtime" />
-    <PackageReference Include="GregRevitAuth" Version="2.0.8718.22924" />
+    <PackageReference Include="Greg" Version="3.0.1.4707" ExcludeAssets="runtime" />
+    <!--Exclude GregRevitAuth runtime to avoid having the transitive deps copied to the output. PrivateAssets does not work for that. -->
+    <PackageReference Include="GregRevitAuth" Version="3.0.8935.26399" ExcludeAssets="runtime" GeneratePathProperty="true" />
     <PackageReference Include="pythonnet_py38_win" Version="2.5.1" ExcludeAssets="runtime" />
   </ItemGroup>
   <Target Name="Copy dll" AfterTargets="Build">
-    <ItemGroup>
-        <DetectiveDll Include="$(PkgDynamoVisualProgramming_Core)\lib\net8.0\DynamoInstallDetective.dll" />
-    </ItemGroup>
-    <Copy SourceFiles="@(DetectiveDll)" DestinationFolder="$(OutputPath)\.." />
+    <Copy SourceFiles="$(PkgDynamoVisualProgramming_Core)\lib\net8.0\DynamoInstallDetective.dll" DestinationFolder="$(OutputPath)\.." />
+    <Copy SourceFiles="$(PkgGregRevitAuth)\lib\net8.0\GregRevitAuth.dll" DestinationFolder="$(OutputPath)" />
   </Target>
 </Project>
