--- a/src/Config/CS_SDK.props
+++ b/src/Config/CS_SDK.props
@@ -42,4 +42,9 @@
   <PropertyGroup Condition="$(Platform.Contains('_DA'))">
 	<DefineConstants>$(DefineConstants);DESIGN_AUTOMATION</DefineConstants>
   </PropertyGroup>
+  <ItemDefinitionGroup>
+    <ProjectReference>
+      <PrivateAssets>all</PrivateAssets>
+    </ProjectReference>
+  </ItemDefinitionGroup>
 </Project>
