--- a/test/Libraries/RevitTestServices/RevitTestServices.csproj
+++ b/test/Libraries/RevitTestServices/RevitTestServices.csproj
@@ -40,7 +40,11 @@
       <Private>True</Private>
     </Reference>
 	<Reference Include="NUnit.Engine.Api">
-      <HintPath>$(PACKAGESPATH)\NUnit.Engine.Api\lib\netstandard2.0\NUnit.Engine.Api.dll</HintPath>
+      <HintPath>$(PACKAGESPATH)\NUnit.Engine\lib\netstandard2.0\NUnit.Engine.Api.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+	<Reference Include="NUnit.Engine.Core">
+      <HintPath>$(PACKAGESPATH)\NUnit.Engine\lib\netstandard2.0\NUnit.Engine.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RevitAPI">
