--- a/.adsk/ContinuousLocalization.yml
+++ b/.adsk/ContinuousLocalization.yml
@@ -29,4 +29,4 @@ common:
         - doc\distrib\NodeHelpFiles\en-US\fallback_docs\*.md, doc\distrib\NodeHelpFiles\%langMsNet%\fallback_docs\*.md
         - doc\distrib\Templates\en-US\*.dyn, doc\distrib\Templates\%langMsNet%\*.dyn
         - doc\distrib\Templates\en-US\filenames.json, doc\distrib\Templates\%langMsNet%\filenames.json
-        - doc\distrib\Samples\en-US\Revit\*.dyn
+        - doc\distrib\Samples\en-US\Revit\*.dyn, doc\distrib\Samples\%langMsNet%\Revit\*.dyn
