--- a/src/Libraries/RevitNodesUI/RevitNodesUI.csproj
+++ b/src/Libraries/RevitNodesUI/RevitNodesUI.csproj
@@ -75,6 +75,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="3.5.2.8856" ExcludeAssets="runtime" />
+    <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="$(DYNAMOCORENODES_VERSION)" ExcludeAssets="runtime" />
   </ItemGroup>
 </Project>
