--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -57,7 +57,7 @@
     <ProjectReference Include="$(SolutionDir)Libraries\RevitServices\RevitServices.csproj" />
     <ProjectReference Include="..\RevitNodesTests\RevitNodesTests.csproj" />
     <ProjectReference Include="..\RevitTestServices\RevitTestServices.csproj" />
-    <PackageReference Include="DynamoVisualProgramming.Tests" Version="3.5.2.8856" ExcludeAssets="runtime" />
+    <PackageReference Include="DynamoVisualProgramming.Tests" Version="$(DYNAMOTESTS_VERSION)" ExcludeAssets="runtime" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RevitTestConfiguration.tt">
