--- a/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
+++ b/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
@@ -43,7 +43,7 @@
     <ProjectReference Include="$(SolutionDir)Libraries\RevitNodes\RevitNodes.csproj" />
     <ProjectReference Include="$(SolutionDir)Libraries\RevitServices\RevitServices.csproj" />
     <ProjectReference Include="..\RevitTestServices\RevitTestServices.csproj" />
-    <PackageReference Include="DynamoVisualProgramming.Tests" Version="3.5.2.8856" ExcludeAssets="runtime" />
+    <PackageReference Include="DynamoVisualProgramming.Tests" Version="$(DYNAMOTESTS_VERSION)" ExcludeAssets="runtime" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Elements\Views\StructuralPlanViewTests.cs" />
