Update Dynamo core to 3.5.2 (#3182)
* Update Dynamo Core to 3.5.2.8914

* add packages_versions.props to easily change Dynamo package version

--- a/src/Libraries/RevitNodesUI/RevitNodesUI.csproj
+++ b/src/Libraries/RevitNodesUI/RevitNodesUI.csproj
@@ -75,6 +75,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="3.5.1.8731" ExcludeAssets="runtime" />
+    <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="$(DYNAMOCORENODES_VERSION)" ExcludeAssets="runtime" />
   </ItemGroup>
 </Project>
